[gd_scene load_steps=3 format=2]

[ext_resource path="res://Skripte/Close.gd" type="Script" id=1]
[ext_resource path="res://Grafiken/close.png" type="Texture" id=2]

[node name="Close" type="TextureRect"]
margin_left = 963.0
margin_top = 10.0
margin_right = 1011.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 1 )

[connection signal="gui_input" from="." to="." method="_on_Close_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Close_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Close_mouse_exited"]
